--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "openai>=1.51.2",
     "pydantic-settings>=2.5.2",
     "piccolo[sqlite]>=1.20.0",
+    "pymupdf>=1.24.13",
 ]
 
 [tool.uv]
